<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TAUG  JellyBean New Features</string>
    <string name="title_section3">DayDream</string>
    <string name="title_section2">Rich notifications</string>
    <string name="title_section1">Lockscreen widgets</string>
    <string name="expandable_widget">TAUG - Expandable widget</string>
    <string name="cut_widget">TAUG - Cut widget</string>
    <string name="two_layouts_widget">TAUG - Two layouts widget</string>
    <string name="header">Header</string>
    <string name="footer">Footer</string>
    <string name="title">Title</string>
    <string name="description">A little longer description as the widget has some more space</string>
    <string name="widgets_fragment_text">The widgets should be accessible in your lockscreen.\nIf you don\'t have JB 4.2 you could add it to your home.\n\nAvailable widgets: \n ▶TAUG - Expandable widget\n ▶TAUG - Cut widget\n ▶TAUG - Two layouts widget</string>
    <string name="menu_about">About</string>
    <string name="main_activity_title">TAUG - JB New features</string>
    <string name="followme">Follow me</string>
    <string name="about_main">This application has been developed by Nicolas POMEPUY for the Toulouse Android User Group (TAUG).</string>
    <string name="simple">Simple</string>
    <string name="second_stack">Second stack</string>
    <string name="inbox">Inbox</string>
    <string name="big_picture">Big picture</string>
    <string name="big_text">Big text</string>
    <string name="taug">TAUG</string>
    <string name="simple_notification">A simple notification</string>
    <string name="simple_notification_description">This is a simple notification!</string>
    <string name="inbox_notification">Inbox notification</string>
    <string name="events_received">Events received</string>
    <string name="event_tracker_details">Event tracker details:</string>
    <string name="big_picture_notification">Big picture notification</string>
    <string name="picture_received">You received a picture</string>
    <string name="custom_notification">Custom notification</string>
    <string name="share">Share</string>
    <string name="dream_name">TAUG DayDream</string>
    <string name="twitter">Twitter</string>
    <string name="refresh_time">Refresh time</string>
    <string name="refresh_time_summary">Refresh time in seconds"</string>
    <string name="search">Search</string>
    <string name="search_summary">Enter the search words you want to display</string>
    <string name="behavior">Behavior</string>
    <string name="keep_unread">Keep unread</string>
    <string name="keep_unread_summary">Keep unread until I completed an action</string>
    <string name="keep_position">Keep position</string>
    <string name="keep_position_summary">Keep position unchanged</string>
    <string name="daydream_fragment_text">To enable daydream, go in your phone\'s settings ▶ display ▶ Daydream and choose TAUG DayDream.</string>
    <string name="clear_notifications">Clear notifications</string>
    <string name="all">All</string>
    <string name="first_stack">First stack</string>
    <string name="simple_notifications">Simple notifications</string>
    <string name="display_settings">Display settings</string>
    <string name="long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ac mattis nisi. Phasellus et euismod ipsum. Duis sed nisl massa. Vestibulum consequat neque ac nulla semper porta. Maecenas fermentum pharetra lorem vitae ullamcorper. Aenean ipsum eros, ornare at aliquam nec, viverra in elit. In hac habitasse platea dictumst. Etiam mauris est, ullamcorper eget condimentum in, porta in turpis. Vivamus hendrerit feugiat aliquet. Aenean urna turpis, rutrum in viverra quis, tristique vitae augue. Pellentesque sagittis fringilla nisi at lobortis.</string>
    <string name="battery_settings">Battery settings</string>
    <string name="night_mode">Night mode</string>
    <string name="night_mode_summary">Set the brightness to the minimum to avoid battery use.</string>
    <string name="show_battery">Show battery</string>
    <string name="show_battery_summary">Always show the battery level.</string>
    <string name="show_hour">Show hour</string>
    <string name="show_hour_summary">Always show the hour.</string>
    <string name="opensource">This application is open source. Find its code here : https://github.com/PomepuyN/TAUG-JellyBeanNewFeatures</string>
</resources>