<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:picker="http://schemas.android.com/apk/res-auto/" >

    
        <SwitchPreference
            android:defaultValue="true"
            android:key="night_mode"
            android:title="@string/night_mode"
            android:summary="@string/night_mode_summary"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="show_battery"
            android:title="@string/show_battery"
            android:summary="@string/show_battery_summary"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="show_hour"
            android:title="@string/show_hour"
            android:summary="@string/show_hour_summary"/>

</PreferenceScreen>