<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" > 
    <header android:fragment="fr.taug.jellybeannewfeatures.ui.fragments.DayDreamPreferenceFragmentTwitter" 
        android:title="@string/twitter">
        <extra android:name="resource" android:value="preferences" />
    </header>
    <header android:fragment="fr.taug.jellybeannewfeatures.ui.fragments.DayDreamPreferenceFragmentBehavior" 
        android:title="@string/behavior">
        <extra android:name="resource" android:value="preferences" />
    </header>
    <header android:fragment="fr.taug.jellybeannewfeatures.ui.fragments.DayDreamPreferenceFragmentBattery" 
        android:title="@string/battery_settings">
        <extra android:name="resource" android:value="preferences" />
    </header>
</preference-headers>